@@ -102,7 +102,7 @@ public class VirtuosoResultSet implements ResultSet
    {
      Object[] args = new Object[2];
      args[0] = statement.statid;
-     args[1] = new Long(statement.future.hashCode());
+     args[1] = Long.valueOf(statement.future.hashCode());
      statement.connection.removeFuture(statement.connection.getFuture(
     VirtuosoFuture.fetch,args, statement.rpc_timeout));
    }
@@ -120,10 +120,10 @@ public class VirtuosoResultSet implements ResultSet
    {
      Object[] args = new Object[6];
      args[0] = statement.statid;
-     args[1] = new Long(op);
-     args[2] = new Long(firstline);
-     args[3] = new Long(nbline);
-     args[4] = new Long((statement.connection.getAutoCommit()) ? 1 : 0);
+     args[1] = Long.valueOf(op);
+     args[2] = Long.valueOf(firstline);
+     args[3] = Long.valueOf(nbline);
+     args[4] = Long.valueOf((statement.connection.getAutoCommit()) ? 1 : 0);
      args[5] = null;
      statement.future = statement.connection.getFuture(
   VirtuosoFuture.extendedfetch,args, statement.rpc_timeout);
@@ -1108,7 +1108,7 @@ public class VirtuosoResultSet implements ResultSet
          if(!(currentRow < 1 || currentRow > rows.size()))
             ((VirtuosoRow)(rows.elementAt(currentRow - 1))).getContent(row);
       }
-      row[columnIndex - 1] = new Boolean(x);
+      row[columnIndex - 1] = Boolean.valueOf(x);
    }
    public void updateByte(int columnIndex, byte x) throws VirtuosoException
    {
@@ -1120,7 +1120,7 @@ public class VirtuosoResultSet implements ResultSet
          if(!(currentRow < 1 || currentRow > rows.size()))
             ((VirtuosoRow)(rows.elementAt(currentRow - 1))).getContent(row);
       }
-      row[columnIndex - 1] = new Byte(x);
+      row[columnIndex - 1] = Byte.valueOf(x);
    }
    public void updateShort(int columnIndex, short x) throws VirtuosoException
    {
@@ -1132,7 +1132,7 @@ public class VirtuosoResultSet implements ResultSet
          if(!(currentRow < 1 || currentRow > rows.size()))
             ((VirtuosoRow)(rows.elementAt(currentRow - 1))).getContent(row);
       }
-      row[columnIndex - 1] = new Short(x);
+      row[columnIndex - 1] = Short.valueOf(x);
    }
    public void updateInt(int columnIndex, int x) throws VirtuosoException
    {
@@ -1144,7 +1144,7 @@ public class VirtuosoResultSet implements ResultSet
          if(!(currentRow < 1 || currentRow > rows.size()))
             ((VirtuosoRow)(rows.elementAt(currentRow - 1))).getContent(row);
       }
-      row[columnIndex - 1] = new Integer(x);
+      row[columnIndex - 1] = Integer.valueOf(x);
    }
    public void updateLong(int columnIndex, long x) throws VirtuosoException
    {
@@ -1156,7 +1156,7 @@ public class VirtuosoResultSet implements ResultSet
          if(!(currentRow < 1 || currentRow > rows.size()))
             ((VirtuosoRow)(rows.elementAt(currentRow - 1))).getContent(row);
       }
-      row[columnIndex - 1] = new Long(x);
+      row[columnIndex - 1] = Long.valueOf(x);
    }
    public void updateFloat(int columnIndex, float x) throws VirtuosoException
    {
@@ -1168,7 +1168,7 @@ public class VirtuosoResultSet implements ResultSet
          if(!(currentRow < 1 || currentRow > rows.size()))
             ((VirtuosoRow)(rows.elementAt(currentRow - 1))).getContent(row);
       }
-      row[columnIndex - 1] = new Float(x);
+      row[columnIndex - 1] = Float.valueOf(x);
    }
    public void updateDouble(int columnIndex, double x) throws VirtuosoException
    {
@@ -1180,7 +1180,7 @@ public class VirtuosoResultSet implements ResultSet
          if(!(currentRow < 1 || currentRow > rows.size()))
             ((VirtuosoRow)(rows.elementAt(currentRow - 1))).getContent(row);
       }
-      row[columnIndex - 1] = new Double(x);
+      row[columnIndex - 1] = Double.valueOf(x);
    }
    public void updateBigDecimal(int columnIndex, BigDecimal x) throws VirtuosoException
    {
